# LinkMan

./: .gitignore  Dockerfile  README.md  docker-compose.yml  linkman.server.toml  linkman.toml  linkman.toml.example  pyproject.toml  requirements.txt  test-tls.toml
deploy/: certbot.sh  deploy.sh  install.sh  install_server.sh  local_deploy.sh  nginx.conf  server_deploy.sh  update.sh
deploy/systemd/: linkman.service
docs/: deploy.md  developer_guide.md
security_audit/: audit_checklist.md  security_audit_report.md
src/linkman/: __init__.py
src/linkman/client/: __init__.py  main.py
src/linkman/client/core/: __init__.py  connection_adapters.py  protocol.py
src/linkman/client/gui/: app.py
src/linkman/client/proxy/: __init__.py  local.py  modes.py
src/linkman/client/rules/: __init__.py  matcher.py
src/linkman/client/utils/: asyncio_manager.py  proxy_manager.py  thread_safe_state.py
src/linkman/server/: __init__.py  main.py
src/linkman/server/api/: __init__.py  routes.py
src/linkman/server/core/: __init__.py  connection_adapters.py  handler.py  protocol.py  session.py  udp.py  websocket.py
src/linkman/server/manager/: __init__.py  auth.py  device.py  monitor.py  traffic.py
src/linkman/shared/: __init__.py  errors.py
src/linkman/shared/crypto/: __init__.py  aead.py  keys.py  secure_keys.py
src/linkman/shared/protocol/: types.py  (+4 more)
tests/: __init__.py  conftest.py  test_config.py  test_connection_pool.py  test_crypto.py  test_device.py  test_protocol.py  test_rules.py  test_session.py  test_traffic.py  test_websocket.py
web/: index.html  package.json  vite.config.ts
web/src/: App.vue  style.css
web/src/components/: Sidebar.vue
web/src/router/: index.ts
web/src/stores/: status.ts
web/src/views/: Dashboard.vue  Devices.vue  Settings.vue  Traffic.vue
(+8 files in other folders)
